# pansy

./: .gitignore  DOWNLOAD_QUEUE.md  README-zh.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: Release.yml
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/niuhuan/pansy/: Jni.java  MainActivity.kt
android/app/src/main/kotlin/opensource/pansy/: MainActivity.kt
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/values-night/: styles.xml
android/app/src/profile/: AndroidManifest.xml
ci/: Cargo.toml  changelog.txt  version.info.txt
ci/src/check_asset/: main.rs
ci/src/check_release/: main.rs
ci/src/upload_asset/: main.rs
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
lib/: cross.dart  ffi.dart  main.dart  types.dart
lib/basic/: Themes.dart  app_screen_data.dart  commons.dart  cross.dart  events.dart  format_utils.dart  platform.dart  ranks.dart  update_checker.dart
lib/basic/config/: download_dir.dart  download_save_target.dart  download_to.dart  illust_display.dart  in_china.dart  picture_source.dart  sni_bypass.dart  use_download_queue.dart
lib/basic/download/: download_manager.dart  download_service.dart
lib/basic/stores/: tag_history_store.dart
lib/bridge/: pixiv.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/screens/: app_screen.dart  discovery_screen.dart  download_list_screen.dart  downloads_screen.dart  hello_screen.dart  hots_screen.dart  illust_gallery_screen.dart  illust_info_screen.dart  inapp_webview_login_screen.dart  init_screen.dart  login_screen.dart  new_search_screen.dart  news_screen.dart  pc_login_screen.dart  ranking_screen.dart  recommend_screen.dart  search_common.dart  search_result_screen.dart  search_screen.dart  search_title_screen.dart  settings_screen.dart  user_bookmarks_screen.dart  user_following_screen.dart  user_illusts_screen.dart  user_info_screen.dart
lib/screens/components/: Avatar.dart  appbar.dart  content_error.dart  download_actions.dart  empty_app_bar.dart  first_url_illust_flow.dart  flutter_search_bar.dart  illust_card.dart  illust_flow.dart  image_size_abel.dart  pixiv_image.dart  pixiv_network.dart  shadow_icon_button.dart
lib/screens/components/account_card/: account_card.dart  common.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  udto.dart
lib/src/rust/api/: api.dart
lib/src/rust/pixirust/: entities.dart
lib/states/: pixiv_login.dart
linux/: CMakeLists.txt  main.cc  my_application.cc
linux/appimage/: AppRun.desktop
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/native.xcodeproj/xcuserdata/niuhuan.xcuserdatad/xcschemes/: xcschememanagement.plist
native/src/: api.rs  download.rs  lib.rs  local.rs  tests.rs
native/src/entities/: download_image.rs  mod.rs  network_image.rs  property.rs
native/src/pixirust/: client.rs  entities.rs  mod.rs
resources/icon/: update_icons.sh
rust/: Cargo.toml
rust/src/: download.rs  frb_generated.rs  lib.rs  local.rs  udto.rs
rust/src/api/: api.rs  mod.rs
rust/src/entities/: download_task.rs  mod.rs  network_image.rs
rust/src/pixirust/: client.rs  entities.rs  utils.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: pansy_native.podspec  rust_lib_pansy.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: pansy_native.podspec  rust_lib_pansy.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: bind.android-arm64.sh  bind.android.sh  bind.ios-sim.sh  bind.ios.sh  bind.linux.sh  bind.macos.sh  bind.windows.cmd
tips/: illusts.json
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
