[package]
name = "ci"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check-release"
path = "src/check_release/main.rs"

[[bin]]
name = "check-asset"
path = "src/check_asset/main.rs"

[[bin]]
name = "upload-asset"
path = "src/upload_asset/main.rs"

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
