[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = { path = "../../flutter_rust_bridge/frb_rust" }
once_cell = "1"
lazy_static = "1"
pixirust = { git = "https://github.com/niuhuan/pixirust.git", branch = "master" }
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4"
sea-orm = { version = "0.6", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
bytes = "1.1"
md5 = "0.7"
hex = "0.4"
base64 = "0.13"
async_once = "0.2"
tokio = { version = "1", features = ["full"] }
image = { version = "0", features = ["jpeg", "gif", "webp", "bmp", "png", "jpeg_rayon"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0"
