[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.75"
flutter_rust_bridge = { path = "../../flutter_rust_bridge/frb_rust" }
once_cell = "1.18.0"
lazy_static = "1.4.0"
libc = "0.2.150"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
openssl = { version = "0.10.59", features = ["vendored"] }
chrono = "0.4.31"
sea-orm = { version = "0.12.6", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
bytes = "1.5.0"
md5 = "0.7.0"
hex = "0.4.3"
base64 = "0.21.5"
async_once = "0.2.6"
tokio = { version = "1.34.0", features = ["full"] }
image = { version = "0.24.7", features = ["jpeg", "gif", "webp", "bmp", "png", "jpeg_rayon"] }
directories = "5.0.1"
reqwest = { version = "0.11.22", features = ["socks"] }
sha2 = "0.10.8"
uuid = { version = "1.6.1", features = ["v4"] }
urlencoding = "2.1.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
