[package]
name = "rust_lib_pansy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.98"
async_once = "0.2.6"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
flutter_rust_bridge = "=2.11.1"
hex = "0.4.3"
image = { version = "0.25.6", features = ["jpeg", "gif", "webp", "bmp", "png"] }
lazy_static = "1.5.0"
libc = "0.2.174"
md5 = "0.7.0"
once_cell = "1.21.3"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = { version = "0.12.20", features = ["socks"] }
sea-orm = { version = "1.1.12", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
